# srd

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  features.md  limitations.md
.github/workflows/: rust.yml
examples/: Cargo.toml
examples/simple_fight/: README.md  main.rs
src/: ability.rs  dice.rs  error.rs  hit_points.rs  lib.rs  proficiency.rs  skill.rs  util.rs  value.rs
src/character/: level.rs  mod.rs  spawn.rs
src/character/class/: fighter.rs  mod.rs
src/character/race/: dwarf.rs  generic_model.rs  hill_dwarf.rs  mod.rs
src/compendium/: mod.rs  standard_compendium.rs
src/handle/: creature_handle.rs  mod.rs
src/rules/: actor_rules.rs  character_rules.rs  fight_rules.rs  mod.rs  narrator.rs  rounds_rules.rs  space_rules.rs  team_rules.rs
src/rules/core/: action.rs  statistic.rs
srd/: Cargo.toml  README.md
srd-macros/: Cargo.toml  README.md
srd-macros/src/: lib.rs
srd/src/: ability.rs  constants.rs  error.rs  hit_points.rs  lib.rs  skill.rs  speed.rs  util.rs  value.rs
srd/src/character/: level.rs  mod.rs  spawn.rs
srd/src/character/class/: mod.rs
srd/src/character/race/: dwarf.rs  generic_model.rs  hill_dwarf.rs  mod.rs
srd/src/compendium/: standard_compendium.rs
srd/src/handle/: creature_handle.rs
srd/src/rules/: character_rules.rs  mod.rs  narrator.rs  rounds_rules.rs  space_rules.rs  team_rules.rs
srd/src/rules/core/: action.rs  battlegrid.rs  constants.rs  mod.rs  size.rs  statistic.rs
